syntax = "proto3";

option java_multiple_files = true;
option java_package = "ca.stevenskelton.examples.realtimeziohubgrpc";
option java_outer_classname = "SyncServiceProto";
option objc_class_prefix = "SyncService";

package grpc;

message Data {
  uint32 id = 1;
  string field1 = 2;
}

service SyncService {
  rpc BidirectionalStream (stream SyncRequest) returns (stream SyncResponse) {}
}

message SyncRequest {

  message Subscribe {
    uint32 id = 1;
    string previous_etag = 3;
  }

  message DataUpdate {
    Data data = 1;
    string previous_etag = 2;
  }

  repeated Subscribe subscribes = 1;
  repeated uint32 unsubscribeIds = 2;
  bool unsubscribeAll = 3;
  repeated DataUpdate updates = 4;
}

message SyncResponse {
  Data data = 1;
  string etag = 2;
}